# bf2cpp

./: .gitignore
source/: CMakeLists.txt  main.cpp
source/include/: bf.h
source/src/: bf.cpp
